--- a/templates/dossierList.html.twig
+++ b/templates/dossierList.html.twig
@@ -2,17 +2,39 @@
 {% set title = 'Dossier active List' %}
 
 {% block body %}
-    {% for dossier in dossierList %}
-        <div>
-            <p>
-                Title: {{ dossier.title }}, client: {{ dossier.client.name }}.<br>
-                Date: {{ dossier.createdDate|date('d/m/Y') }}<br>
-                <a href="{{ path('dossierItem', {'id': dossier.id}) }}">Consult dossier</a>
-            </p>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                {% for dossier in dossierList %}
+                    <p>
+                        Title: {{ dossier.title }}, client: {{ dossier.client.name }}.<br>
+                        Date: {{ dossier.createdDate|date('d/m/Y') }}<br>
+                        <a href="{{ path('dossierItem', {'id': dossier.id}) }}">Consult dossier</a>
+                    </p>
+                {% else %}
+                    <p>No dossiers.</p>
+                {% endfor %}
+            </div>
+            <div class="col list-group">
+                <h3>Last Todolist</h3>
+                <p><em>Stored in another database.</em></p>
+
+                {% for todo in todolist %}
+                <label class="list-group-item d-flex gap-3">
+                    <input class="form-check-input flex-shrink-0" type="checkbox" value="" checked="" style="font-size: 1.375em;">
+                    <span class="pt-1 form-checked-content">
+                        <strong>Title: {{ todo.title }}</strong>
+                        <small class="d-block text-body-secondary">{{ todo.description }}</small>
+                    </span>
+                </label>
+                {% else %}
+                    <p>No list.</p>
+                {% endfor %}
+
+            </div>
         </div>
-    {% else %}
-        <p>No dossiers.</p>
-    {% endfor %}
+    </div>
+
 
     <div class="navigation">
         {{ knp_pagination_render(dossierList) }}
