--- a/templates/dossierList.html.twig
+++ b/templates/dossierList.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% set title = 'Dossier active List' %}
+{% set title = 'Dossier '~ status.name|lower ~' List' %}
 
 {% block body %}
     <div class="container">
@@ -39,4 +39,13 @@
     <div class="navigation">
         {{ knp_pagination_render(dossierList) }}
     </div>
+
+    <p>Consult dossiers in status:
+        {% for item in status.cases %}
+            {% if (item.value != status.value) %}
+                <a href="{{ app.request.pathInfo }}?status={{ item.value }}">{{ item.name|lower }}</a>
+                {% if (loop.last == false) %}-{% endif %}
+            {% endif %}
+        {% endfor %}
+    </p>
 {% endblock %}
